--- a/close-to-water-challenge/css/main.css
+++ b/close-to-water-challenge/css/main.css
@@ -1,6 +1,4 @@
 /* global setting */
-
-
 @font-face {
     font-family: 'Noto Sans TC';
     font-style: normal;
@@ -11,10 +9,6 @@
 
 body {
     background-color: #a4d9f0b4;
-    font-family: 'Noto Sans TC';
-    letter-spacing: 0.08em;
-    font-size: 20px;
-    line-height: 1.8;
 }
 
 .hide {
@@ -26,127 +20,204 @@ body {
 }
 
 a {
-    color: #2e2bdde2;
-    font-weight: 300;
+    color: rgb(7, 91, 175);
+    font-weight: 600;
     text-decoration: none;
 }
 
-a:hover{
+a:hover {
     cursor: pointer;
 }
+
+/* loading */
+#loading-animation {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #99e0ff;
+    z-index: 9999;
+    align-items: center;
+    display: grid;
+}
+
+.loader {
+    margin: 0 0 2em;
+    height: 100px;
+    width: 20%;
+    text-align: center;
+    padding: 1em;
+    margin: 0 auto 1em;
+}
+
 
 /* font & title */
 @media (min-width: 768px) {
     body {
         max-width: 100%;
         margin: auto;
+        font-family: 'Noto Sans TC';
+        letter-spacing: 0.18rem;
+        font-size: 20px;
+        line-height: 1.8;
     }
 
-    h1{
+    h1 {
         font-size: 70px;
     }
 
-    h2{
+    h2 {
         font-size: 66px;
     }
 
-    h3{
+    h3 {
         font-size: 28px;
+        letter-spacing: 0.15rem;
+    }
+
+    .img-caption{
+        font-size: 16px;
+        letter-spacing: 0.1rem;
     }
 
     #title H1 {
         font-size: 70px;
-        font-weight: 800;
+        font-weight: 500;
+        letter-spacing: 0.05rem;
     }
 
     #title H2 {
         font-size: 40px;
-        font-weight: 600;
+        font-weight: 500;
+        letter-spacing: 0.05rem;
     }
 
-    .trans-section h2{
+    .trans-section h2 {
         letter-spacing: 2.5rem;
         color: rgb(23, 76, 79);
         font-weight: 900;
     }
 
-    .title-w{
+    .title-w {
         background-size: contain;
         width: 100%;
         min-height: 100vh;
         background-repeat: no-repeat;
     }
-    
+
     #Title1 .title-w {
         /* background-image: url('../materials/HeadlineTitle1.png'); */
         background-image: url('../materials/cleanTBG1.png');
     }
-    
+
     #Title2 .title-w {
         /* background-image: url('../materials/HeadlineTitle2.png'); */
         background-image: url('../materials/cleanTBG2.png');
     }
-    
+
     #Title3 .title-w {
         /* background-image: url('../materials/HeadlineTitle3.png'); */
         background-image: url('../materials/cleanTBG3.png');
     }
-    
+
     #Title4 .title-w {
         /* background-image: url('../materials/HeadlineTitle4.png'); */
         background-image: url('../materials/cleanTBG4.png');
     }
-    
+
     #Title5 .title-w {
         /* background-image: url('../materials/HeadlineTitle5.png'); */
         background-image: url('../materials/cleanTBG5.png');
     }
 
-    #Title1 .trans-section{
+    #Title1 .trans-section {
         position: relative;
     }
 
-    #Title1 .title-w h2{
+    #Title1 .title-w h2 {
         position: absolute;
         top: 11%;
         left: 4%
     }
 
-    #Title2 .title-w h2{
+    #Title2 .title-w h2 {
         position: absolute;
         top: 11%;
         right: 4%
     }
 
-    #Title3 .title-w h2{
+    #Title3 .title-w h2 {
         position: absolute;
         top: 15%;
         right: 4%
     }
 
-    #Title4 .title-w h2{
+    #Title4 .title-w h2 {
         position: absolute;
         top: 10%;
         left: 5%
     }
 
-    #Title5 .title-w h2{
+    #Title5 .title-w h2 {
         position: absolute;
         top: 11%;
         left: 4%
     }
-    
+
+    /* h3 */
+    .arg-point .title-s,
+    .opinion .title-s{
+        width: 70%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .arg-point .title-s{
+        margin: 10px auto -20px auto;
+    }
+
+    .arg-point .title-s h3,
+    .opinion .title-s h3{
+        margin-left: 15px;
+    }
+
+    .arg-point .title-s .icon {
+        height: 50px;
+        width: auto;
+    }
+
+    .opinion .title-s .icon {
+        width: 70px;
+        height: auto;
+    }
+
+
 }
 
-/* trans-section */
+@media (max-width: 450px) {
+    body {
+        max-width: 90%;
+        margin: auto;
+        font-family: 'Noto Sans TC';
+        letter-spacing: 0.08em;
+        font-size: 20px;
+        line-height: 1.8;
+    }
+}
 
+
+/* trans-section */
 @media (min-width: 760px) {
     .trans-section {
         position: relative;
         display: flex;
         justify-content: center;
     }
-    
+
     .trans-section .svg {
         position: absolute;
         height: auto;
@@ -191,15 +262,15 @@ a:hover{
         display: flex;
         justify-content: center;
     }
-    
-    .trans-section{
+
+    .trans-section {
         background-size: cover;
         background-position: left 40%;
         width: 100%;
         min-height: 100vh;
         background-repeat: no-repeat;
     }
-    
+
     .trans-section .svg {
         position: absolute;
         height: auto;
@@ -260,50 +331,6 @@ a:hover{
     }
 }
 
-@media (max-width: 450px) {
-    body {
-        max-width: 90%;
-        margin: auto;
-    }
-}
-
-/* layout */
-main {
-    display: grid;
-    grid-gap: 20vh;
-}
-
-main .article-section.hor-grid {
-    min-height: 100vh;
-}
-
-main .trans-section.hor-grid {
-    min-height: 100vh;
-}
-
-
-/* loading */
-#loading-animation {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-color: #99e0ff;
-    z-index: 9999;
-    align-items: center;
-    display: grid;
-}
-
-.loader {
-    margin: 0 0 2em;
-    height: 100px;
-    width: 20%;
-    text-align: center;
-    padding: 1em;
-    margin: 0 auto 1em;
-}
 
 /* Cover */
 @media (min-width: 760px) {
@@ -381,12 +408,12 @@ main .trans-section.hor-grid {
         left: 30px
     }
 
-    #title H2 {
+    #title H1 {
         font-size: 35px;
         font-weight: bold;
     }
 
-    #title H3 {
+    #title H2 {
         font-size: 24px;
     }
 
@@ -416,7 +443,22 @@ main .trans-section.hor-grid {
 
 }
 
+/* layout */
 /* article-section layout */
+main {
+    display: grid;
+    grid-gap: 5vh; /* title - article*/
+}
+
+main .article-section.hor-grid {
+    min-height: 70vh;
+    padding: 20px 25px;
+}
+
+main .trans-section.hor-grid {
+    min-height: 100vh;
+}
+
 .article-section {
     display: flex;
     flex-direction: column;
@@ -424,74 +466,88 @@ main .trans-section.hor-grid {
     align-items: center;
 }
 
+.m50{
+    margin: 35px auto !important
+}
+
+.am30{
+    margin: 10px auto !important;
+    padding: 15px 20px !important
+}
+
+.mt-30{
+    margin-top: 30px !important;
+}
 
 /* article-section article */
 @media (min-width: 760px) {
     .article-section article,
-    .open-section article{
-        width: 65%;
+    .open-section article {
+        width: 66%;
+        padding: 20px 30px;
         margin: 0 auto;
-        margin-top: 30px;
         flex-shrink: inherit;
         flex-grow: auto;
         justify-content: center;
+        /* background-color: aqua; */
     }
 
-    #S3.article-section .arg-point article{
+    #S3.article-section .arg-point article {
         margin: 0 auto;
     }
 
-    .article-section .arg-point{
+    .article-section .arg-point {
         margin: 40px auto;
         width: 75%;
         background-color: aliceblue;
         opacity: 0.65;
     }
 
-    .article-section .arg-point article{
+    .article-section .arg-point article {
         padding: 20px 10px;
         width: 80%;
         /* background-color: aquamarine; */
     }
 
-    .article-section .arg-point .title-s{
-        width: 70%;
-        margin: 0 auto;
+    #End{
+        display: flex;
         justify-content: center;
+        align-items: center;
     }
+
+
 }
 
 @media (max-width: 450px) {
     .article-section article,
-    .open-section article{
+    .open-section article {
         width: 65%;
         margin: 0 auto;
-        margin-top: 30px;
         flex-shrink: inherit;
         flex-grow: auto;
         justify-content: center;
     }
 
-    #S3.article-section .arg-point article{
+    #S3.article-section .arg-point article {
         margin: 0 auto;
     }
 
-    .article-section .arg-point{
+    .article-section .arg-point {
         margin: 40px auto;
         width: 75%;
         background-color: aliceblue;
         opacity: 0.65;
     }
 
-    .article-section .arg-point article{
+    .article-section .arg-point article {
         padding: 20px 10px;
         width: 80%;
         /* background-color: aquamarine; */
     }
 
-    .article-section .arg-point .title-s{
+    .article-section .arg-point .title-s {
         width: 70%;
-        margin: 0 auto;
+        margin: 25px auto -20px auto;
         justify-content: center;
     }
 }
@@ -511,8 +567,7 @@ main .trans-section.hor-grid {
     .article-section .figure img {
         width: 55%;
         height: auto;
-        margin: 60px auto 10px auto;
-        /* margin-top: 50px; */
+        margin: 0 auto;
         flex-shrink: inherit;
         flex-grow: auto;
         display: block;
@@ -522,15 +577,18 @@ main .trans-section.hor-grid {
 
     .article-section .img-caption,
     .open-section .img-caption {
-        max-width: 50%;
-        margin: 2px auto;
+        max-width: 80%;
+        margin: 5px auto;
         display: block;
-        font-size: 16px;
         justify-content: center;
     }
 
     .open-section .img-caption {
         max-width: 150px;
+    }
+
+    .article-section .opinion .img-caption {
+        margin: 10px auto;
     }
 }
 
@@ -540,14 +598,10 @@ main .trans-section.hor-grid {
         width: 60vw;
     }
 
-    .article-section .figure {
-        margin-top: 15px;
-    }
-    
     .article-section .figure img {
         width: 75vw;
         margin: 0 auto;
-        margin-top: 15px;
+        /* margin-top: 15px; */
         flex-shrink: inherit;
         flex-grow: auto;
         display: block;
@@ -566,6 +620,7 @@ main .trans-section.hor-grid {
     }
 }
 
+
 /* opening */
 #showAns:hover {
     background-color: rgba(0, 123, 255, 1);
@@ -580,12 +635,12 @@ main .trans-section.hor-grid {
         display: flex;
         margin: 40px auto 20px auto;
     }
-    
+
     .flip-container .card {
         flex: 1;
         position: relative;
     }
-    
+
     .flip-container .card img {
         width: 95%;
         height: auto;
@@ -596,7 +651,7 @@ main .trans-section.hor-grid {
         align-items: center;
         margin: 15px auto;
     }
-    
+
     .card .ans {
         background-color: #e6e9ecdc;
         opacity: 0.8;
@@ -636,7 +691,7 @@ main .trans-section.hor-grid {
         width: 90%;
         flex-direction: column;
     }
-    
+
     .flip-container .card {
         flex: 1;
         position: relative;
@@ -644,7 +699,7 @@ main .trans-section.hor-grid {
         flex-direction: column;
         justify-content: center;
     }
-    
+
     .flip-container .card img {
         width: 75%;
         height: auto;
@@ -656,10 +711,10 @@ main .trans-section.hor-grid {
         margin: 5px auto;
     }
 
-    .flip-container .card .img-caption{
+    .flip-container .card .img-caption {
         margin: 0 auto
     }
-    
+
     .card .ans {
         background-color: #e6e9ecdc;
         opacity: 0.8;
@@ -690,6 +745,7 @@ main .trans-section.hor-grid {
         margin: 15px auto;
     }
 }
+
 
 /* interactive map */
 @media (min-width: 760px) {
@@ -740,7 +796,7 @@ main .trans-section.hor-grid {
 /* law */
 @media (min-width: 760px) {
     .share-pdf {
-        margin-top: 50px;
+        /* margin-top: 50px; */
         width: 40%;
         height: auto;
     }
@@ -752,7 +808,7 @@ main .trans-section.hor-grid {
 
 @media (max-width: 450px) {
     .share-pdf {
-        margin-top: 50px;
+        /* margin-top: 50px; */
         width: 65%;
         height: auto;
     }
@@ -761,6 +817,7 @@ main .trans-section.hor-grid {
         opacity: 0;
     }
 }
+
 
 /* video */
 @media (min-width: 760px) {
@@ -786,7 +843,7 @@ main .trans-section.hor-grid {
         right: 3%;
         scale: 1.2;
         transition: transform 0.5s ease;
-        
+
     }
 
     #video2 {
@@ -807,20 +864,20 @@ main .trans-section.hor-grid {
         transition: opacity 0.5s;
         position: fixed;
         z-index: 2;
+        background-color: rgba(232, 236, 236, 0.8);
         width: 20%;
         padding: 10px 15px;
-        font-size: 20px;
-        /*30*/
-        background-color: rgba(232, 236, 236, 0.8);
         right: 18%;
         top: 48%;
     }
 
 
     #video-view .v2-text2.show-slowly {
+        opacity: 1;
+        transition: opacity 0.5s;
+        background-color: rgba(232, 236, 236, 0.8);
         position: fixed;
         z-index: 2;
-        background-color: rgba(232, 236, 236, 0.7);
         width: 32%;
         padding: 20px 18px;
         left: 12%;
@@ -854,9 +911,9 @@ main .trans-section.hor-grid {
     #video-view .v2-text5.show-slowly {
         opacity: 1;
         transition: opacity 0.5s;
-        position: fixed;
         z-index: 2;
         background-color: rgba(232, 236, 236, 0.8);
+        position: fixed;
         width: 35%;
         padding: 10px 15px;
         left: 20%;
@@ -866,9 +923,9 @@ main .trans-section.hor-grid {
     #video-view .v2-text6.show-slowly {
         opacity: 1;
         transition: opacity 0.5s;
-        position: fixed;
         z-index: 2;
         background-color: rgba(232, 236, 236, 0.8);
+        position: fixed;
         width: 38%;
         padding: 10px 12px;
         left: 12%;
@@ -878,9 +935,9 @@ main .trans-section.hor-grid {
     #video-view .v2-text7.show-slowly {
         opacity: 1;
         transition: opacity 0.5s;
-        position: fixed;
         z-index: 2;
         background-color: rgba(232, 236, 236, 0.8);
+        position: fixed;
         width: 33%;
         padding: 10px 15px;
         right: 12%;
@@ -890,9 +947,9 @@ main .trans-section.hor-grid {
     #video-view .v2-text8.show-slowly {
         opacity: 1;
         transition: opacity 0.5s;
-        position: fixed;
         z-index: 2;
         background-color: rgba(232, 236, 236, 0.8);
+        position: fixed;
         width: 35%;
         padding: 10px 15px;
         right: 12%;
@@ -980,6 +1037,7 @@ main .trans-section.hor-grid {
     }
 }
 
+
 /* opinion */
 @media (min-width: 760px) {
     .perspective {
@@ -989,35 +1047,12 @@ main .trans-section.hor-grid {
         margin: 30px auto;
         font-size: 18px;
         background-color: aliceblue;
+        opacity: 0.8;
     }
 
-    .opinion{
+    .opinion {
         display: flex;
         flex-direction: column;
-    }
-
-    .opinion .title-s,
-    .arg-point .title-s {
-        display: flex;
-        padding: 10px 15px;
-        margin: 20px auto;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .arg-point .title-s .icon {
-        height: 50px;
-        width: auto;
-    }
-
-    .opinion .title-s .icon{
-        width: 70px;
-        height: auto;
-    }
-
-    .opinion .title-s h3,
-    .arg-point .title-s h3 {
-        margin-left: 15px;
     }
 
     .perspective.opinion-left .left-col,
@@ -1027,6 +1062,8 @@ main .trans-section.hor-grid {
         display: flex;
         flex-direction: column;
         margin: 10px 0px;
+        justify-content: center;
+        align-items: center;
     }
 
     .perspective.opinion-left .right-col,
@@ -1037,6 +1074,8 @@ main .trans-section.hor-grid {
         flex-direction: column;
         margin: 10px 5px;
         margin: 10px auto;
+        justify-content: center;
+        align-items: center;
     }
 
     .perspective.opinion-left .left-col .figure {
@@ -1044,13 +1083,10 @@ main .trans-section.hor-grid {
         align-items: center;
         margin: 0 10px;
         position: relative;
-        top: -5%;
-        left: 2%;
     }
 
     .perspective.opinion-right .right-col .figure {
-        justify-content: center;
-        align-items: center;
+
         position: relative;
     }
 
@@ -1065,13 +1101,6 @@ main .trans-section.hor-grid {
         width: 70%;
         align-items: center;
         scale: 1.5
-    }
-
-    .perspective.opinion-left .left-col .figure-text,
-    .perspective.opinion-right .right-col .figure-text {
-        align-items: center;
-        margin-top: 15px;
-        margin: 15px auto;
     }
 
     .perspective.opinion-left .right-col article,
@@ -1096,7 +1125,7 @@ main .trans-section.hor-grid {
         background-color: aliceblue;
     }
 
-    .opinion{
+    .opinion {
         display: flex;
         flex-direction: column;
     }
@@ -1115,7 +1144,7 @@ main .trans-section.hor-grid {
         width: auto;
     }
 
-    .opinion .title-s .icon{
+    .opinion .title-s .icon {
         width: 70px;
         height: auto;
     }
@@ -1172,13 +1201,6 @@ main .trans-section.hor-grid {
         scale: 1.5
     }
 
-    .perspective.opinion-left .left-col .figure-text,
-    .perspective.opinion-right .right-col .figure-text {
-        align-items: center;
-        margin-top: 15px;
-        margin: 15px auto;
-    }
-
     .perspective.opinion-left .right-col article,
     .perspective.opinion-right .left-col article {
         flex: 1;
@@ -1195,7 +1217,7 @@ main .trans-section.hor-grid {
 footer {
     display: grid;
     background-color: #1c5d93;
-    margin-top: 150px;
+    /* margin-top: 150px; */
     padding: 5% 10%;
     color: white;
     position: absolute;
